Update CSS to make Draft pop-up mode legible (issue #3).

--- a/tiddlers/Theme Tweaks.css
+++ b/tiddlers/Theme Tweaks.css
@@ -320,3 +320,9 @@ table>thead :first-child th {
 .tc-tiddler-info {
     margin: 0px;
 }
+
+/* Drafts List */
+.tc-drafts-list a {
+    background: #316dca;
+    color: #eee !important;
+}
